--- a/src/components/List.css
+++ b/src/components/List.css
@@ -12,7 +12,7 @@
 
 .table-scroll {
     overflow-x: auto;
-    max-height: 400px;
+    max-height: 300px;
 }
 
 th, td {
@@ -47,4 +47,11 @@ th, td {
 
 .row button:hover {
     background-color: #ddd;
+}
+
+@media (max-width: 900px) {
+    .row h2 {
+        margin-left: 40px !important;    
+    }
+    
 }
