--- a/src/components/List.css
+++ b/src/components/List.css
@@ -35,7 +35,7 @@ th, td {
 .row {
     display: flex;
     justify-content: space-between;
-    /* align-items: flex-end; */
+    align-items: center;
     /* justify-content: space-around; */
 }
 
@@ -48,4 +48,3 @@ th, td {
 .row button:hover {
     background-color: #ddd;
 }
-
