--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 * {
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   background: linear-gradient(to right, rgb(255, 81, 47), rgb(221, 36, 118));
-  /* background: linear-gradient(to right, rgb(64, 59, 74), rgb(231, 233, 187)); */
   min-height: 100vmin;
   display: flex;
   flex-direction: column;
